add works and footer html-contents

--- a/index.html
+++ b/index.html
@@ -129,8 +129,18 @@
           </div>
         </div>
       </section>
+      <section class="section">
+        <p class="section__title">Contact</p>
+        <ul class="icon-box">
+          <li><i class="fab fa-twitter"></i></li>
+          <li><i class="fab fa-instagram"></i></li>
+          <li><i class="far fa-envelope"></i></li>
+        </ul>
+      </section>
     </main>
-    
+    <footer class="fotter">
+      <span class="footer__text">All rights reserved.</span>
+    </footer>
   </body>
     
 </html>
