--- a/index.html
+++ b/index.html
@@ -16,129 +16,132 @@
       </div>
     </header>
     <main class="container">
-      <section class="section">
-        <p class="section__title">Profile</p>
-        <div>
-          ここにテキストが入ります。ここにテキストが入ります。
-          ここにテキストが入ります。ここにテキストが入ります。
-          ここにテキストが入ります。ここにテキストが入ります。
-        </div>
-      </section>
-      <section class="section">
-        <p class="section__title">Skill</p>
-        <div class="section__block">
-          <i class="fas fa-code"></i>
-          <p class="section__subtitle">WEBサイト制作</p>
-          <div class="section__detail-box">
-            <i class="fas fa-check"></i>
-            <span class="section__detail-box__text">
-              HTML / CSS / jQuery
-            </span>
-          </div>
-          <div class="section__detail-box">
-            <i class="fas fa-check"></i>
-            <span class="section__detail-box__text">
-              Bootstrap
-            </span>
-          </div>
-          <div class="section__detail-box">
-            <i class="fas fa-check"></i>
-            <span class="section__detail-box__text">
-              レスポンシブ対応
-            </span>
-          </div>
-          <div class="section__detail-box">
-            <i class="fas fa-check"></i>
-            <span class="section__detail-box__text">
-              Sass / Compass
-            </span>
-          </div>
-        </div>
-        <div class="section__block">
-          <i class="fas fa-laptop-code"></i>
-          <p class="section__subtitle">WEBアプリケーション制作</p>
-          <div class="section__detail-box">
-            <i class="fas fa-check"></i>
-            <span class="section__detail-box__text">
-              Ruby on Rails
-            </span>
-          </div>
-          <div class="section__detail-box">
-            <i class="fas fa-check"></i>
-            <span class="section__detail-box__text">
-              twitterなどの投稿・写真共有アプリ
-            </span>
-          </div>
-        </div>
-        <div class="section__block">
-          <i class="fas fa-globe-europe"></i>
-          <p class="section__subtitle">外国語</p>
-          <div class="section__detail-box">
-            <span>English</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <div class="section__detail-box">
-            <span>Spanish</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
-          </div>
-          <div class="section__detail-box">
-            <span>Chinese</span>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
+      <section class="section profile">
+        <p class="title">Profile</p>
+        <div class="flex-box">
+          <div class="profile__image flex-box__left"></div>
+          <div class="profile__contents flex-box__right">
+            <div class="profile__contents__text">
+              ここにテキストが入ります。ここにテキストが入ります。
+              ここにテキストが入ります。ここにテキストが入ります。
+              ここにテキストが入ります。ここにテキストが入ります。
+            </div>
           </div>
         </div>
       </section>
-      <section class="section">
-        <p class="section__title">Works</p>
-        <div class="section__block">
-          <div class="section__block__image"></div>
-          <div class="section__block__text-box">
-            <p class="section__block__text-box__upper">架空コーポレートサイト</p>
-            <p class="section__block__text-box__lower">コンテンツ編集中</p>
+      <section class="section skill">
+        <p class="title">Skill</p>
+        <div class="skill-box">
+          <div class="section__block skill__block">
+            <i class="fas fa-code skill__block__icon"></i>
+            <p class="skill__block__subtitle">WEBサイト制作</p>
+            <div class="skill__block__detail-box">
+              <span class="skill__block__detail-box__text">
+                HTML / CSS / jQuery
+              </span>
+              <span class="skill__block__detail-box__text">
+                Bootstrap
+              </span>
+              <span class="skill__block__detail-box__text">
+                レスポンシブ対応
+              </span>
+              <span class="skill__block__detail-box__text">
+                Sass / Compass
+              </span>
+            </div>
           </div>
-        </div>
-        <div class="section__block">
-          <div class="section__block__image"></div>
-          <div class="section__block__text-box">
-            <p class="section__block__text-box__upper">WEBサービスLP</p>
+          <div class="section__block skill__block">
+            <i class="fas fa-laptop-code skill__block__icon"></i>
+            <p class="skill__block__subtitle">WEBアプリケーション制作</p>
+            <div class="skill__block__detail-box">
+              <span class="skill__block__detail-box__text">
+                Ruby on Rails
+              </span>
+              <span class="skill__block__detail-box__text">
+                twitterなどの投稿・写真共有アプリ
+              </span>
+            </div>
           </div>
-        </div>
-        <div class="section__block">
-          <div class="section__block__image"></div>
-          <div class="section__block__text-box">
-            <p class="section__block__text-box__upper">ブログサイト</p>
-            <p class="section__block__text-box__lower">コンテンツ更新中</p>
-          </div>
-        </div>
-        <div class="section__block">
-          <div class="section__block__image"></div>
-          <div class="section__block__text-box">
-            <p class="section__block__text-box__upper">WEBアプリLP</p>
-            <p class="section__block__text-box__lower">コンテンツ更新中</p>
+          <div class="section__block skill__block">
+            <i class="fas fa-globe-europe skill__block__icon"></i>
+            <p class="skill__block__subtitle">外国語</p>
+            <div class="skill__block__detail-box">
+              <div class="skill__block__detail-box__row">
+                <span>English</span>
+                <span class="skill__block__detail-box__row__icons">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                </span>
+              </div>
+              <div class="skill__block__detail-box__row">
+                <span>Spanish</span>
+                <span class="skill__block__detail-box__row__icons">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </span>
+              </div>
+              <div class="skill__block__detail-box__row">
+                <span>Chinese</span>
+                <span class="skill__block__detail-box__row__icons">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </span>
+              </div>
+            </div>
           </div>
         </div>
       </section>
       <section class="section">
-        <p class="section__title">Contact</p>
+        <p class="title">Works</p>
+        <div class="works">
+          <div class="works__block">
+            <div class="works__block__image" id="corporate-site__bg"></div>
+            <div class="works__block__text-box">
+              <p class="works__block__text-box__upper">架空コーポレートサイト</p>
+              <p class="works__block__text-box__lower">コンテンツ編集中</p>
+            </div>
+          </div>
+          <div class="works__block">
+            <div class="works__block__image" id="smacam__bg"></div>
+            <div class="works__block__text-box">
+              <p class="works__block__text-box__upper">WEBサービスLP</p>
+            </div>
+          </div>
+          <div class="works__block">
+            <div class="works__block__image" id="weblog__bg"></div>
+            <div class="works__block__text-box">
+              <p class="works__block__text-box__upper">ブログサイト</p>
+              <p class="works__block__text-box__lower">コンテンツ更新中</p>
+            </div>
+          </div>
+          <div class="works__block">
+            <div class="works__block__image" id="animal__bg"></div>
+            <div class="works__block__text-box">
+              <p class="works__block__text-box__upper">WEBアプリLP</p>
+              <p class="works__block__text-box__lower">コンテンツ更新中</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <p class="title">Contact</p>
         <ul class="icon-box">
-          <li><i class="fab fa-twitter"></i></li>
-          <li><i class="fab fa-instagram"></i></li>
-          <li><i class="far fa-envelope"></i></li>
+          <li><img src="images/twitter.png" id="twitter_icon"></li>
+          <li><img src="images/instagram.png"></li>
+          <li><img src="images/mail.png" id="mai_icon"></li>
         </ul>
       </section>
     </main>
-    <footer class="fotter">
+    <footer class="footer">
       <span class="footer__text">All rights reserved.</span>
     </footer>
   </body>
