--- a/index.html
+++ b/index.html
@@ -36,36 +36,70 @@
       </section>
       <section class="section skill">
         <p class="section__title">Skill</p>
+        <i class="far fa-question-circle question-icon"></i>
         <div class="skill-wrapper">
           <div class="skill__block">
             <i class="fas fa-code skill__block__topicon"></i>
             <p class="skill__block__title">WEBサイト制作</p>
+            <ul class="skill__block__lists">
+              <li class="skill__block__lists__row">
+                <span>HTML/CSS</span>
+                <span class="skill__block__lists__row__stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                </span>
+              </li>
+              <li class="skill__block__lists__row">
+                <span>jQuery</span>
+                <span class="skill__block__lists__row__stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </span>
+              </li>
+            </ul>
             <div class="skill__block__lists">
               <span class="skill__block__lists__row">
-                HTML / CSS / jQuery
-              </span>
-              <span class="skill__block__lists__row">
-                Bootstrap
-              </span>
-              <span class="skill__block__lists__row">
-                レスポンシブ対応
+                Bootstrap, skelton
               </span>
               <span class="skill__block__lists__row">
                 Sass / Compass
+              </span>
+              <span class="skill__block__lists__row">
+                レスポンシブ対応OK
               </span>
             </div>
           </div>
           <div class="skill__block">
             <i class="fas fa-laptop-code skill__block__topicon"></i>
             <p class="skill__block__title">WEBアプリケーション制作</p>
-            <div class="skill__block__lists">
-              <span class="skill__block__lists__row">
-                Ruby on Rails
-              </span>
-              <span class="skill__block__lists__row">
-                twitterなどの投稿・写真共有アプリ
-              </span>
-            </div>
+            <ul class="skill__block__lists">
+              <li class="skill__block__lists__row">
+                <span>Ruby on Rails</span>
+                <span class="skill__block__lists__row__stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </span>
+              </li>
+              <li class="skill__block__lists__row">
+                <span>PHP / Laravel</span>
+                <span class="skill__block__lists__row__stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </span>
+              </li>
+            </ul>
           </div>
           <div class="skill__block">
             <i class="fas fa-globe-europe skill__block__topicon"></i>
@@ -109,7 +143,9 @@
         <p class="section__title">Works</p>
         <div class="works-wrapper">
           <div class="works__block">
-            <div class="works__block__image" id="corporate-site__bg"></div>
+            <div class="works__block__image" id="corporate-site__bg">
+              <a href="http://corporate.iamyuna.work/" class="site-link"></a>
+            </div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">架空コーポレートサイト</p>
               <p class="works__block__textbox__lower">コンテンツ編集中</p>
