--- a/index.html
+++ b/index.html
@@ -36,7 +36,61 @@
       </section>
       <section class="section skill">
         <p class="section__title">Skill</p>
-        <i class="far fa-question-circle question-icon"></i>
+        <div class="question-wrapper">
+          <i class="far fa-question-circle question-icon"></i>
+          <ul class="question-box">
+            <li>
+              <span class="skill__block__lists__row__stars">
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+              </span>
+              <span>触ったことがある程度</span>
+            </li>
+            <li>
+              <span class="skill__block__lists__row__stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+              </span>
+              <span>基本的な文法など理解している</span>
+            </li>
+            <li>
+              <span class="skill__block__lists__row__stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+                <i class="far fa-star"></i>
+              </span>
+              <span>詰まりながらも開発できる</span>
+            </li>
+            <li>
+              <span class="skill__block__lists__row__stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </span>
+              <span>比較的スムーズに開発できる</span>
+            </li>
+            <li>
+              <span class="skill__block__lists__row__stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </span>
+              <span>問題なく開発レベル</span>
+            </li>
+          </ul>
+        </div>
         <div class="skill-wrapper">
           <div class="skill__block">
             <i class="fas fa-code skill__block__topicon"></i>
@@ -185,6 +239,10 @@
     <footer class="footer">
       <span class="footer__text">All rights reserved.</span>
     </footer>
+    
+    <!--jQuery-->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
     
 </html>
