some files modified

--- a/index.html
+++ b/index.html
@@ -206,20 +206,20 @@
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image" id="smacam__bg"></div>
+            <div class="works__block__image alert" id="smacam__bg"></div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">WEBサービスLP</p>
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image" id="weblog__bg"></div>
+            <div class="works__block__image alert" id="weblog__bg"></div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">ブログサイト</p>
               <p class="works__block__textbox__lower">コンテンツ更新中</p>
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image" id="animal__bg"></div>
+            <div class="works__block__image alert" id="animal__bg"></div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">WEBアプリLP</p>
               <p class="works__block__textbox__lower">コンテンツ更新中</p>
@@ -230,9 +230,9 @@
       <section class="section contact">
         <p class="section__title">Contact</p>
         <ul class="iconbox">
-          <li class="icon-bg"><img src="images/twitter.png" id="twitter_icon"></li>
-          <li class="icon-bg"><img src="images/instagram.png"></li>
-          <li class="icon-bg"><img src="images/mail.png" id="mai_icon"></li>
+          <li class="icon-bg"><a href="https://twitter.com/____b_progineer"><img src="images/twitter.png" id="twitter_icon"></a></li>
+          <li class="icon-bg alert"><img src="images/instagram.png"></li>
+          <li class="icon-bg alert"><img src="images/mail.png" id="mai_icon"></li>
         </ul>
       </section>
     </main>
