--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
       <section class="section contact">
         <p class="section__title">Contact</p>
         <ul class="iconbox">
-          <li class="icon-bg"><a href="https://twitter.com/____b_progineer"><img src="images/twitter.png" id="twitter_icon"></a></li>
-          <li class="icon-bg alert"><img src="images/instagram.png"></li>
-          <li class="icon-bg alert"><img src="images/mail.png" id="mai_icon"></li>
+          <li class="icon-bg"><a href="https://twitter.com/____b_progineer"><img src="images/twitter.png" id="twitter_icon" alt="twitter"></a></li>
+          <li class="icon-bg alert"><img src="images/instagram.png" alt="instagram"></li>
+          <li class="icon-bg alert"><img src="images/mail.png" id="mai_icon" alt="mail"></li>
         </ul>
       </section>
     </main>
