add sns-section,  edit contact-section, and edit some scss

--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
           <div class="profile__imagebox flex-box__left"></div>
           <div class="profile__textbox flex-box__right">
             <p class="profile__textbox__row">東京都在住、25歳。</p>
-            <p class="profile__textbox__row">WEBデザイナー、エンジニア目指しています。</p>
-            <p class="profile__textbox__row">『勇往邁進』がモットー。</p>
-            <p class="profile__textbox__row">オンラインスクールにて、プログラミング・デザインを学び、
-            その奥深さに魅せられ、どんどん夢中に。</p>
+            <p class="profile__textbox__row">WEBデザイナー、フロントエンジニアを目指しています。</p>
+            <p class="profile__textbox__row">オンラインスクールにて、プログラミング・デザインを学びました</p>
             <p class="profile__textbox__row">
               もともと、教えることが大好きなので
               プログラミング × 教育にも携わっていきたいと
-              考えています。(初心者向けブログ更新中)
+              考えています。
+              <span class="marker link-hover"><a href="https://kamekame-walking.hatenablog.com">(初心者向けブログ更新中)</a></span>
             </p>
           </div>
         </div>
@@ -227,13 +226,22 @@
           </div>
         </div>
       </section>
-      <section class="section contact">
-        <p class="section__title">Contact</p>
+      <section class="section sns">
+        <p class="section__title">SNS , Blog</p>
         <ul class="iconbox">
           <li class="icon-bg"><a href="https://twitter.com/____b_progineer"><img src="images/twitter.png" id="twitter_icon" alt="twitter"></a></li>
           <li class="icon-bg alert"><img src="images/instagram.png" alt="instagram"></li>
-          <li class="icon-bg alert"><img src="images/mail.png" id="mai_icon" alt="mail"></li>
+          <li class="icon-bg"><a href="https://kamekame-walking.hatenablog.com"><img src="images/pen.png" alt="blog"></a></li>
         </ul>
+      </section>
+      <section class="section contact">
+        <p class="section__title">Contact</p>
+        <div class="contact__mailbox link-hover">
+          <a href="mailto:i_am_yuna@outlook.com">
+            <div class="contact__icon-bg"><img src="images/mail.png" alt="mail" class="contact__mailbox__icon"></div>
+            <span class="contact__mailbox__address">i_am_yuna@outlook.com</span>
+          </a>
+        </div>
       </section>
     </main>
     <footer class="footer">
