edit html-contents and scss

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
           <div class="profile__imagebox flex-box__left"></div>
           <div class="profile__textbox flex-box__right">
             <p class="profile__textbox__row">東京都在住、25歳。</p>
-            <p class="profile__textbox__row">WEBデザイナー、フロントエンジニアを目指しています。</p>
+            <p class="profile__textbox__row">WEBデザイナー、フロントエンジニアを目指していますが</p>
+            <p class="profile__textbox__row">サーバーサイドの言語も勉強しています</p>
             <p class="profile__textbox__row">オンラインスクールにて、プログラミング・デザインを学びました</p>
             <p class="profile__textbox__row">
-              もともと、教えることが大好きなので
-              プログラミング × 教育にも携わっていきたいと
-              考えています。
+              教えることが大好きなので
+              プログラミング × 教育にも携わっていきたいです！
               <span class="marker link-hover"><a href="https://kamekame-walking.hatenablog.com">(初心者向けブログ更新中)</a></span>
             </p>
           </div>
@@ -201,27 +201,26 @@
             </div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">架空コーポレートサイト</p>
-              <p class="works__block__textbox__lower">コンテンツ編集中</p>
+              <p class="works__block__textbox__lower">コンテンツ追加予定</p>
             </div>
           </div>
           <div class="works__block">
             <div class="works__block__image alert" id="smacam__bg"></div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">WEBサービスLP</p>
+              <p class="works__block__textbox__upper">WEBサイト</p>
             </div>
           </div>
           <div class="works__block">
             <div class="works__block__image alert" id="weblog__bg"></div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">ブログサイト</p>
-              <p class="works__block__textbox__lower">コンテンツ更新中</p>
             </div>
           </div>
           <div class="works__block">
             <div class="works__block__image alert" id="animal__bg"></div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">WEBアプリLP</p>
-              <p class="works__block__textbox__lower">コンテンツ更新中</p>
+              <p class="works__block__textbox__upper">WEBアプリ</p>
+              <p class="works__block__textbox__lower">コンテンツ追加予定</p>
             </div>
           </div>
         </div>
