--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="profile__textbox__row">
               教えることが大好きなので
               プログラミング × 教育にも携わっていきたいです！
-              <span class="marker link-hover"><a href="https://kamekame-walking.hatenablog.com">(初心者向けブログ更新中)</a></span>
+              <span class="bold-text link-hover"><a href="https://kamekame-walking.hatenablog.com">(初心者向けブログ更新中)</a></span>
             </p>
           </div>
         </div>
@@ -122,6 +122,9 @@
               </span>
               <span class="skill__block__lists__row">
                 Sass / Compass
+              </span>
+              <span class="skill__block__lists__row">
+                アニメーション
               </span>
               <span class="skill__block__lists__row">
                 レスポンシブ対応OK
