--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </div>
           <div class="skill__block">
             <i class="fas fa-laptop-code skill__block__topicon"></i>
-            <p class="skill__block__title">WEBアプリケーション制作</p>
+            <p class="skill__block__title">アプリケーション制作</p>
             <ul class="skill__block__lists">
               <li class="skill__block__lists__row">
                 <span>Ruby on Rails</span>
@@ -158,11 +158,21 @@
             </ul>
           </div>
           <div class="skill__block">
-            <i class="fas fa-globe-europe skill__block__topicon"></i>
-            <p class="skill__block__title">外国語</p>
+            <i class="fab fa-github skill__block__topicon"></i>
+            <p class="skill__block__title">その他</p>
             <ul class="skill__block__lists">
               <li class="skill__block__lists__row">
-                <span>English</span>
+                <span>Github</span>
+                <span class="skill__block__lists__row__stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </span>
+              </li>
+              <li class="skill__block__lists__row">
+                <span>Slack</span>
                 <span class="skill__block__lists__row__stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -172,21 +182,41 @@
                 </span>
               </li>
               <li class="skill__block__lists__row">
-                <span>Spanish</span>
+                <span>MySQL</span>
                 <span class="skill__block__lists__row__stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                  <i class="far fa-star"></i>
+                  <i class="fas fa-star"></i>
                   <i class="far fa-star"></i>
                   <i class="far fa-star"></i>
                 </span>
               </li>
               <li class="skill__block__lists__row">
-                <span>Chinese</span>
+                <span>Photoshop</span>
                 <span class="skill__block__lists__row__stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
                   <i class="far fa-star"></i>
+                </span>
+              </li>
+              <li class="skill__block__lists__row">
+                <span>illustrator</span>
+                <span class="skill__block__lists__row__stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                  <i class="far fa-star"></i>
+                </span>
+              </li>
+              <li class="skill__block__lists__row">
+                <span>Adobe XD</span>
+                <span class="skill__block__lists__row__stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
                   <i class="far fa-star"></i>
                   <i class="far fa-star"></i>
                 </span>
