edit profile-section-text-contents and scss(sp)

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <div class="flex-box">
           <div class="profile__imagebox flex-box__left"></div>
           <div class="profile__textbox flex-box__right">
-            <p class="profile__textbox__row">東京都在住、25歳。</p>
-            <p class="profile__textbox__row">WEBデザイナー、フロントエンジニアを目指していますが</p>
-            <p class="profile__textbox__row">サーバーサイドの言語も勉強しています</p>
-            <p class="profile__textbox__row">オンラインスクールにて、プログラミング・デザインを学びました</p>
             <p class="profile__textbox__row">
-              教えることが大好きなので
-              プログラミング × 教育にも携わっていきたいです！
-              <span class="bold-text link-hover"><a href="https://kamekame-walking.hatenablog.com">(初心者向けブログ更新中)</a></span>
+              東京都在住、25歳。オリジナルサービスを開発するため、毎日デザイン・プログラミングを勉強中！オンラインスクールにて、プログラミング・デザインを学びました。
+            </p>
+            <p class="profile__textbox__row">
+              教えることが大好きなので、プログラミング × 教育にも携わっていきたいです！
+            </p>
+            <p class="profile__textbox__row">
+              <span class="bold-text link-hover marker">(初心者向けブログ更新中)</span>
             </p>
           </div>
         </div>
