edit hover-animation sns-icons, works-masks and underline

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <p class="section__title">Works</p>
         <div class="works-wrapper">
           <div class="works__block">
-            <div class="works__block__image" id="corporate-site__bg">
+            <div class="works__block__image masks" id="corporate-site__bg">
               <a href="http://corporate.iamyuna.work/" class="site-link"></a>
             </div>
             <div class="works__block__textbox">
@@ -238,19 +238,19 @@
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image alert" id="smacam__bg"></div>
+            <div class="works__block__image alert masks" id="smacam__bg"></div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">WEBサイト</p>
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image alert" id="weblog__bg"></div>
+            <div class="works__block__image alert masks" id="weblog__bg"></div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">ブログサイト</p>
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image alert" id="animal__bg"></div>
+            <div class="works__block__image alert masks" id="animal__bg"></div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">WEBアプリ</p>
               <p class="works__block__textbox__lower">コンテンツ追加予定</p>
