--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               教えることが大好きなので、プログラミング × 教育にも携わっていきたいです！
             </p>
             <p class="profile__textbox__row">
-              <span class="bold-text link-hover marker">(初心者向けブログ更新中)</span>
+              <span class="bold-text marker">(初心者向けブログ更新中)</span>
             </p>
           </div>
         </div>
