add favicon and delete contact-section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>yuna's portfolio</title>
+    <!--favicon-->
+    <link rel="icon" href="images/favicon.png" sizes="16x16" type="image/png" /> 
+    <link rel="icon" href="images/favicon.png" sizes="32x32" type="image/png" />  
+    <link rel="icon" href="images/favicon.png" sizes="48x48" type="image/png" /> 
+    <link rel="icon" href="images/favicon.png" sizes="62x62" type="image/png" />
     <!--stylesheets-->
     <link rel="stylesheet" href="stylesheets/normalize.css"/>
     <link rel="stylesheet" href="stylesheets/style.css"/>
@@ -266,15 +271,15 @@
           <li class="icon-bg"><a href="https://kamekame-walking.hatenablog.com"><img src="images/pen.png" alt="blog"></a></li>
         </ul>
       </section>
-      <section class="section contact">
-        <p class="section__title">Contact</p>
-        <div class="contact__mailbox link-hover">
-          <a href="mailto:i_am_yuna@outlook.com">
-            <div class="contact__icon-bg"><img src="images/mail.png" alt="mail" class="contact__mailbox__icon"></div>
-            <span class="contact__mailbox__address">i_am_yuna@outlook.com</span>
-          </a>
-        </div>
-      </section>
+      <!--<section class="section contact">-->
+      <!--  <p class="section__title">Contact</p>-->
+      <!--  <div class="contact__mailbox link-hover">-->
+      <!--    <a href="mailto:i_am_yuna@outlook.com">-->
+      <!--      <div class="contact__icon-bg"><img src="images/mail.png" alt="mail" class="contact__mailbox__icon"></div>-->
+      <!--      <span class="contact__mailbox__address">i_am_yuna@outlook.com</span>-->
+      <!--    </a>-->
+      <!--  </div>-->
+      <!--</section>-->
     </main>
     <footer class="footer">
       <span class="footer__text">All rights reserved.</span>
