add ski--block fadein(sp)

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </ul>
         </div>
         <div class="skill-wrapper">
-          <div class="skill__block">
+          <div class="skill__block fadein">
             <i class="fas fa-code skill__block__topicon"></i>
             <p class="skill__block__title">WEBサイト制作</p>
             <ul class="skill__block__lists">
@@ -136,7 +136,7 @@
               </span>
             </div>
           </div>
-          <div class="skill__block">
+          <div class="skill__block fadein">
             <i class="fas fa-laptop-code skill__block__topicon"></i>
             <p class="skill__block__title">アプリケーション制作</p>
             <ul class="skill__block__lists">
@@ -162,7 +162,7 @@
               </li>
             </ul>
           </div>
-          <div class="skill__block">
+          <div class="skill__block fadein">
             <i class="fab fa-github skill__block__topicon"></i>
             <p class="skill__block__title">その他</p>
             <ul class="skill__block__lists">
