--- a/index.html
+++ b/index.html
@@ -243,13 +243,17 @@
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image alert masks" id="smacam__bg"></div>
+            <div class="works__block__image masks" id="smacam__bg">
+              <a href="https://smacam.iamyuna.work" class="site-link"></a>
+            </div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">WEBサイト</p>
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image alert masks" id="weblog__bg"></div>
+            <div class="works__block__image masks" id="weblog__bg">
+              <a href="https://weblog.iamyuna.work" class="site-link"></a>
+            </div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">ブログサイト</p>
             </div>
