edit works-section html/scss (all view)

--- a/index.html
+++ b/index.html
@@ -234,44 +234,70 @@
         <p class="section__title">Works</p>
         <div class="works-wrapper">
           <div class="works__block">
-            <div class="works__block__image masks" id="corporate-site__bg">
+            <div class="works__block__image" id="corporate-site__bg">
               <a href="http://corporate.iamyuna.work/" class="site-link"></a>
+              <img src="images/corporate-site.png" alt="image">
+              <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">架空コーポレートサイト</p>
-              <p class="works__block__textbox__lower">コンテンツ追加予定</p>
+              <ul class="works__block__textbox__lower">
+                <li>ページ&コンテンツ追加予定</li>
+              </ul>
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image masks" id="smacam__bg">
+            <div class="works__block__image" id="smacam__bg">
               <a href="https://smacam.iamyuna.work" class="site-link"></a>
+              <img src="images/smacam.png" alt="image">
+              <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">WEBサイト</p>
+              <p class="works__block__textbox__upper">架空WEBサイト</p>
+              <ul class="works__block__textbox__lower">
+                <li>ページ&コンテンツ追加予定</li>
+                <li>Ruby on RailsまたはLaravelにて開発予定</li>
+              </ul>
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image masks" id="weblog__bg">
+            <div class="works__block__image" id="weblog__bg">
               <a href="https://weblog.iamyuna.work" class="site-link"></a>
+              <img src="images/weblog.png" alt="image">
+              <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
               <p class="works__block__textbox__upper">ブログサイト</p>
+              <ul class="works__block__textbox__lower">
+                <li>WordPressにてデザイン・投稿継続予定</li>
+              </ul>
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image alert masks" id="animal__bg"></div>
+            <div class="works__block__image" id="animal__bg">
+              <img src="images/circle-petit.png" alt="image">
+              <div class="masks sp-view"></div>
+            </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">WEBアプリ</p>
-              <p class="works__block__textbox__lower">コンテンツ追加予定</p>
+              <p class="works__block__textbox__upper">架空スマホアプリ</p>
+              <ul class="works__block__textbox__lower">
+                <li>ページ&コンテンツ追加予定</li>
+                <li>SwiftまたはKotlinにて開発予定</li>
+              </ul>
             </div>
           </div>
           <div class="works__block">
-            <div class="works__block__image masks" id="webrary__bg">
+            <div class="works__block__image" id="webrary__bg">
               <a href="http://corporate.iamyuna.work" class="site-link"></a>
+              <img src="images/webrary.png" alt="image">
+              <div class="masks sp-view"></div>
             </div>
             <div class="works__block__textbox">
-              <p class="works__block__textbox__upper">WEBサイト</p>
-              <p class="works__block__textbox__lower">コンテンツ追加予定</p>
+              <p class="works__block__textbox__upper">架空WEBサイト</p>
+              <ul class="works__block__textbox__lower">
+                <li>ページ&コンテンツ追加予定</li>
+                <li>Ruby on RailsまたはLaravelにて開発予定</li>
+              </div>
             </div>
           </div>
         </div>
